# revise

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  README.md  bootstrap.sh  build.sh
examples/: CMakeLists.txt
examples/qtree_gui/: CMakeLists.txt  FieldListModel.cpp  FieldListModel.h  FieldListView.cpp  FieldListView.h  MainWindow.cpp  MainWindow.h  Scene2d.cpp  Scene2d.h  StateData.h  StateDataController.cpp  StateDataController.h  StateDataFlagModel.cpp  StateDataFlagModel.h  ViewTransformController.cpp  ViewTransformController.h  dir.dox  main.cpp
examples/render_graph_dot/: CMakeLists.txt  main.cpp
examples/s3dmm_gui/: CMakeLists.txt  dir.dox  main.cpp
examples/s3dmm_ren/: .gitignore  CMakeLists.txt  dir.dox  main.cpp  saveFbImage.cpp  saveFbImage.hpp
examples/test_blend_image_part/: CMakeLists.txt  main.cpp
examples/to_cgns/: CMakeLists.txt  main.cpp
examples/use_s3vs_lib/: CMakeLists.txt  main.cpp  s3vs_lib_cfg.json
examples/use_s3vs_worker/: CMakeLists.txt  main.cpp  s3vs_worker_cfg.json  s3vs_worker_cfg_small.json
examples/use_ws_sendframe/: AnimatedScene.cpp  AnimatedScene.hpp  CMakeLists.txt  main.cpp
examples/vis_otree/: App_MyVolumeRaycast.cpp  App_MyVolumeRaycast.hpp  CMakeLists.txt  dir.dox  main.cpp
examples/vis_otree/data/glsl/: volume_raycast_isosurface_alpha.fs  volume_raycast_isosurface_transp_alpha.fs
examples/vis_qtree/: CMakeLists.txt  dir.dox  main.cpp
examples/vis_timestamps/: CMakeLists.txt  main.cpp  vis_timestamps.qrc
src/: CMakeLists.txt  dir.dox  s3dmm_package.dox
src/ctmlex/: CMakeLists.txt  ctmlex.cpp  str.cpp
src/s3dmm/: BinaryMeshReader.cpp  BinaryMeshReader.hpp  CMakeLists.txt  Imamod_gMeshReader.cpp  Imamod_gMeshReader.h  MeshDataProvider.cpp  ProgressReport.cpp  TsagiMeshReader.cpp  TsagiMeshReader.h  dir.dox  mesh_reader.cpp
src/s3dmm_cli/: dir.dox  main.cpp
src/s3dmm_cuda/: CMakeLists.txt  CudaChannelFormat.cu  CudaGlResource.cu  DenseFieldInterpolatorArr_cu_3.cu  DenseFieldInterpolator_cu_3.cu  DenseFieldRenderHelperArr_cu.cu  DenseFieldRenderHelper_cu.cu  DenseFieldRenderer_cu.cu  Device3DArray.cu  DeviceArray.cu  DeviceMemHandle.cu  DeviceTextureObject.cu  DeviceTextureObject.hpp  RenderFuncCaller.hpp  RenderFuncInput.hpp  RenderKernelParam.hpp  chooseKernelDim1d.hpp  clamp.hpp  computeBlockCount.hpp  cudaCheck.hpp  cudaDescribeError.hpp  cudaExceptionTemplate.hpp  cuda_argb_transform.hpp  cuda_blend.hpp  cuda_findInterval.hpp  cuda_lighting.hpp  cuda_vec_op.hpp  glCheck.hpp  manage_profiling.cu  progress_report_cu.hpp  renderArgb.hpp  renderArgbLight.hpp  renderDomainVoxels.hpp  renderIsosurface.hpp  renderIsosurfaces.hpp  renderMaxIntensityProjection.hpp  renderValueOnIsosurface.hpp  renderValueOnIsosurfaces.hpp  selectGpu.cu  surf_alg.hpp
src/s3dmm_prep/: CMakeLists.txt  ProcessingMode.hpp  RunParameters.cpp  RunParameters.hpp  coleso_stub.h  dir.dox  main.cpp  mergeDomains.cpp  mergeDomains.hpp  meshInfo.cpp  meshInfo.hpp  metadataInfo.cpp  metadataInfo.hpp  processExactSolution.cpp  processExactSolution.hpp  processImage.cpp  processImage.hpp  processMesh.cpp  processMesh.hpp
src/s3dmm_prep/code_snippets/: misc.cpp
src/s3vs_js/: .gitignore  CMakeLists.txt  binding-dbg.gyp  binding.gyp  build.sh  free_shmem.sh  index.js  list_shmem.sh  log.txt  node_env.sh  package-lock.json  package.json  readme.md  start.sh
src/s3vs_js/src/: napi_helpers_s3vs.hpp  s3vs_js.cpp
src/s3vs_lib/: BlendImagePart.hpp  CMakeLists.txt  CameraController.cpp  CameraController.hpp  IndexCubeSplitStorage.hpp  MouseInterpreter.cpp  MouseInterpreter.hpp  RenderGraphGenerator.cpp  RenderGraphGenerator.hpp  RenderGraphGeneratorPool.hpp  TimeEstimator.hpp  VsController.cpp  VsRenderer.cpp  VsRenderer.hpp
src/s3vs_worker/: BlockOrderUtil.hpp  CMakeLists.txt  InitBlockSorter.hpp  warmup.cpp
src/s3vs_worker/cuda/: VsWorker_cu.cpp  VsWorker_cu.hpp
src/s3vs_worker/opengl/: App_MyVolumeRaycast.cpp  App_MyVolumeRaycast.hpp  OpenGlSetup.cpp  OpenGlSetup.hpp  VolumeTextureCpuData.cpp  VolumeTextureDataBase.hpp  VolumeTextureDataInterface.hpp  VolumeTextureGpuArrData.cpp  VolumeTextureGpuData.cpp  VolumeTextureGpuDataTpl.hpp  VsWorker.cpp  VsWorker.hpp  VsWorkerInit.cpp  VsWorkerInit.hpp  gl_check.cpp  gl_check.hpp
src/tecplot2bin/: CMakeLists.txt  dir.dox  main.cpp
src/tecplot_gen/: CMakeLists.txt  dir.dox  main.cpp
src/tecplot_rw/: CMakeLists.txt  dir.dox  stru_grid_transformer.cpp  tecplot_r_ascii.cpp
src/vtk2bin/: CMakeLists.txt  RunParameters.cpp  RunParameters.hpp  dir.dox  main.cpp  vtk_rect_grid.cpp  vtk_rect_grid.hpp
src/webserver/: .gitignore  app.js  node_env.sh  package-lock.json  package.json  start.sh
src/webserver/configs/: problems.json  vs_controller_config.json
src/webserver/doc/: s3vs_ctl_api.md  s3vs_ctl_api_request_examples.txt
src/webserver/modules/: frame_server.js  log.js  problems_reader.js  random_string.js
src/webserver/public/javascripts/: objects.js
src/webserver/public/stylesheets/: button.css  clipping-planes.css  color-transfer-function.css  container-props.css  control-panel.css  dialog.css  dropdown-list.css  isosurface.css  number-input.css  player.css  resource-sharing-page.css  separator.css  slider.css  style.css  top.css
src/webserver/routes/: index.js  users.js  vs.js  vs_alive.js  vs_camera.js  vs_fields.js  vs_input.js  vs_login.js  vs_logout.js  vs_mouse.js  vs_problems.js  vs_share.js  vs_time.js  vs_timedatalog.js
src/webserver/views/: index.pug  resource-sharing.pug
src/webserver/views/includes/: MIP-control.pug  argb-control.pug  argb-light-control.pug  clip-control.pug  clip-dialog.pug  color-transfer-function-dialog.pug  domain-voxels-control.pug  isosurface-control.pug  isosurface-range-dialog.pug  scripts.pug  settings-dialog.pug  sharing-resource-link.pug  (+3 more)
src/ws_sendframe/: CMakeLists.txt  FrameServer.cpp  FrameServerThread.cpp  QAppHolder.cpp  echoclient.html  ws_sendframe.qrc
src/ws_sendframe_js/: CMakeLists.txt  binding.gyp  index.js  package-lock.json  package.json  readme.md
src/ws_sendframe_js/src/: ws_sendframe_js.cpp
(+219 files in other folders)
