cmake_minimum_required (VERSION 3.1.3) 
project (examples)

if (S3DMM_ENABLE_GUI)
    if (NOT S3VS_WORKER_CUDA_RENDERING)
        add_subdirectory(s3dmm_gui)
    endif()
    add_subdirectory(vis_qtree)
    add_subdirectory(vis_otree)
    add_subdirectory(qtree_gui)
endif()

if (S3DMM_ENABLE_REN)
    if (NOT S3VS_WORKER_CUDA_RENDERING)
        add_subdirectory(s3dmm_ren)
    endif()
    add_subdirectory(use_s3vs_worker)
    add_subdirectory(use_s3vs_lib)
endif()

add_subdirectory(use_ws_sendframe)
add_subdirectory(render_graph_dot)
add_subdirectory(test_blend_image_part)
add_subdirectory(vis_timestamps)

if (S3DMM_ENABLE_CGNS)
    add_subdirectory(to_cgns)
endif()
